# aliyun-security-group-manager

./: README.md  README_zh.md  __init__.py  aliyun_api.py  conf_helper.py  config.py  db_helper.py  ip_fetcher_plugin.py  ip_helper.py  main.py  pyproject.toml
cfg/: sgm.yaml
plugins/: __init__.py  dig.py  socket_trick.py
tests/: __init__.py  test_conf_helper.py  test_config.py  test_db_helper.py  test_ip_helper.py  test_main.py
